updated landing page header

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
 				<div class="wrap">
 
 					<div class="fix-10-12">
-						<h1 class="hero-title">Välkommen till Besiktningsman.se</h1>
-						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
+						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom">
+						<p class="hero">Sveriges ledande <br> entreprenadbesiktningsföretag</p>
 						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/skeppsbron_1901.jpg)"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)"></div>
 	</section>
 	<!-- E-besiktning SLIDE -->
 	</section>
@@ -164,7 +164,7 @@
 		      <div class="row center-xs">
 
 		        <div class="col-xs-12">
-							<h1 class="center" style="margin-top:30px;">Besiktningsman.se Projekt</h1>
+							<h1 class="center" style="margin-top:30px;">Här entreprenadbesiktar vi just nu <br> med iSpect</h1>
 		          <div class="Section-quote Section-quote--horizontal">
 									<div class="img-fade"></div>
 		              <div class="Section-quotePhoto Section-quotePhoto--lyft"></div>
