--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -138,7 +138,7 @@ Besiktningsman
 					<div class="fix-10-12">
 						<ul class="flex left">
 							<li class="col-10-12 fromBottomLeft">
-								<h1 class="ae-2">Sedan starten 2003 har vi utfört ett stort antal besiktningar åt såväl konsumenter som etablerade företag inom bygg och fastighet.</h1>
+								<h1 class="ae-2">Sedan starten 2003 har vi utfört ett stort antal besiktningar åt såväl konsumenter som erade företag inom bygg och fastighet.</h1>
 								<ul class="flex">
 									<li class="col-11-12">
 										<p>Vårt huvudkontor ligger på Södermalm i Stockholm och vi finns i Uppsala, Norrköping, Göteborg, Malmö samt Helsingborg.</p>
@@ -217,316 +217,7 @@ Besiktningsman
 								</div>
 							</li>
 						</ul>
-						<!--  List two -->
-						<p class="bold">Projektavdelning</p>
-						<ul class="flex fixedSpaces later left  margin-bottom-5">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Madeleine Müller</h3>
-								<div class="ae-6">
-									<p class="micro bold">Projektansvarig Storkund</p>
-									<a href="mailto:madeleine@besiktningsman.se">
-										<p class="micro bold text-blue">madeleine@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/nalle_gellermark.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Nalle Gellermark</h3>
-								<div class="ae-6">
-									<p class="micro bold">Projektansvarig Privatpersoner</p>
-								</div>
-								<a href="mailto:nalle@besiktningsman.se">
-									<p class="micro bold text-blue">nalle@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ph_f.png" alt="Image Thumbnail" />
-								<h3 class="ae-6">Carina Sandgren</h3>
-								<div class="ae-7">
-									<p class="micro bold">Projektassistent</p>
-								</div>
-								<a href="mailto:carina@besiktningsman.se">
-									<p class="micro bold text-blue">carina@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/susanne_pm.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Susanne Linder</h3>
-								<div class="ae-8">
-									<p class="micro bold">Redovisningsekonom</p>
-								</div>
-								<a href="mailto:susanne@besiktningsman.se">
-									<p class="micro bold text-blue">susanne@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<!--  List three -->
-						<p class="bold">Besiktningsmän</p>
-						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/olof_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Olof Johansson</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-									<a href="mailto:olof@besiktningsman.se">
-										<p class="micro bold text-blue">olof@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/rickard_bjork.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Rickard Björk</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:rickard@besiktningsman.se">
-									<p class="micro bold text-blue">rickard@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/leif_berg.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-6">Leif Berg</h3>
-								<div class="ae-7">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:leif@besiktningsman.se">
-									<p class="micro bold text-blue">leif@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/magnus_engstrom.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Magnus Engström</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:magnus@besiktningsman.se">
-									<p class="micro bold text-blue">magnus@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<!--  List four -->
-						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/jose_escobar.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Jose Escobar</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-									<a href="mailto:jose@besiktningsman.se">
-										<p class="micro bold text-blue">jose@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Lasse Grandahl</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:rickard@besiktningsman.se">
-									<p class="micro bold text-blue">lasse@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/orjan_hoglund.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-6">Örjan Höglund</h3>
-								<div class="ae-7">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:orjan@besiktningsman.se">
-									<p class="micro bold text-blue">orjan@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/charlie_hoglund.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Charlie Höglund</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:charlie@besiktningsman.se">
-									<p class="micro bold text-blue">charlie@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<!--  List five -->
-						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/jeanette_immo.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Jeanette Immo</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-									<a href="mailto:jeanette@besiktningsman.se">
-										<p class="micro bold text-blue">jeanette@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/dan_jakobsson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Dan Jakobsson</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:dan@besiktningsman.se">
-									<p class="micro bold text-blue">dan@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ulf_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-6">Ulf johansson</h3>
-								<div class="ae-7">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:ulf@besiktningsman.se">
-									<p class="micro bold text-blue">ulf@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ari_laukka.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Ari Laukka</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:ari@besiktningsman.se">
-									<p class="micro bold text-blue">ari@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<!--  List six -->
-						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/robert_lindbom.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Robert Lindbom</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-									<a href="mailto:robert@besiktningsman.se">
-										<p class="micro bold text-blue">robert@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/konrad_stockenvall.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Konrad Stockenvall</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:konrad@besiktningsman.se">
-									<p class="micro bold text-blue">konrad@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/goran_svensson.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-6">Göran Svensson</h3>
-								<div class="ae-7">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:goran@besiktningsman.se">
-									<p class="micro bold text-blue">goran@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/margareta_telkert.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Margareta Telkert</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:margareta@besiktningsman.se">
-									<p class="micro bold text-blue">margareta@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<!--  List six -->
-						<ul class="flex fixedSpaces later left">
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/jim_lofgren.jpg" alt="Image Thumbnail" />
-								<h3 class="ae-5">Jim Löfgren</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-									<a href="mailto:jim@besiktningsman.se">
-										<p class="micro bold text-blue">jim@besiktningsman.se</p>
-									</a>
-								</div>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/leo_simic.jpg" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-5">Leo Simic</h3>
-								<div class="ae-6">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:leo@besiktningsman.se">
-									<p class="micro bold text-blue">leo@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width:257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-6">Birger Faith-Ell</h3>
-								<div class="ae-7">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:birger@besiktningsman.se">
-									<p class="micro bold text-blue">birger@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Anders Widman</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:anders@besiktningsman.se">
-									<p class="micro bold text-blue">anders@besiktningsman.se</p>
-								</a>
-							</li>
-							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail" />
-								<h3 class="ae-7">Niklas Josefsson</h3>
-								<div class="ae-8">
-									<p class="micro bold">Besiktningsman</p>
-								</div>
-								<a href="mailto:niklas@besiktningsman.se">
-									<p class="micro bold text-blue">niklas@besiktningsman.se</p>
-								</a>
-							</li>
-						</ul>
-						<div class="fix-12-12">
-							<h1 class="ae-1">Filialkontor</h1>
-						</div>
-						<div class="fix-12-12">
-							<!--  list seven filialkontor -->
-							<ul class="flex fixedSpaces later left margin-bottom-5">
-								<li class="col-3-12  ">
-									<h3>Uppsala</h3>
-									<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-									<h3 class="ae-5">Lasse Grandahl</h3>
-									<div class="ae-6">
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:lasse@besiktningsman.se">
-											<p class="micro bold text-blue">lasse@besiktningsman.se</p>
-										</a>
-									</div>
-								</li>
-								<li class="col-3-12  ">
-									<h3>Norrköping</h3>
-									<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
-									<h3 class="ae-7">Martin Viberg</h3>
-									<div class="ae-8">
-										<p class="micro bold">Besiktningschef & Besiktningsman</p>
-										<a href="mailto:martin@besiktningsman.se">
-											<p class="micro bold text-blue">martin@besiktningsman.se</p>
-										</a>
-									</div>
-								</li>
-								<li class="col-3-12  ">
-									<h3>Göteborg & Helsingborg</h3>
-									<img class="img-91 wide" src="../assets/img/team/johan_hall.png" style="width: 257px !important;" alt="Image Thumbnail" />
-									<h3 class="ae-6">Johan Hall</h3>
-									<div class="ae-7">
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:johan@besiktningsman.se">
-											<p class="micro bold text-blue">johan@besiktningsman.se</p>
-										</a>
-									</div>
-								</li>
-							</ul>
+
 						</div>
 
 					</div>
@@ -551,84 +242,84 @@ Besiktningsman
 						<!-- remove class tintLogos to disable color change of logo images -->
 						<ul class="grid equal later">
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-3">
+								<div class=" wide equalElement ae-3">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ssm.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-4">
+								<div class=" wide equalElement ae-4">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-5">
+								<div class=" wide equalElement ae-5">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/sb.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-6">
+								<div class=" wide equalElement ae-6">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ikano-bostad.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-7">
+								<div class=" wide equalElement ae-7">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/sollentunahem.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-8">
+								<div class=" wide equalElement ae-8">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ffab.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-3">
+								<div class=" wide equalElement ae-3">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ncc.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-4">
+								<div class=" wide equalElement ae-4">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/em.jpg" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-5">
+								<div class=" wide equalElement ae-5">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/peab.jpg" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-6">
+								<div class=" wide equalElement ae-6">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/niras.gif" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-7">
+								<div class=" wide equalElement ae-7">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-8">
+								<div class=" wide equalElement ae-8">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/nordea.svg" alt="Svenska Bostäder" />
 									</div>
@@ -643,28 +334,28 @@ Besiktningsman
 						<!-- remove class tintLogos to disable color change of logo images -->
 						<ul class="grid equal later">
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-3">
+								<div class=" wide equalElement ae-3">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/pedersen.jpg" alt="Pedersen" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-4">
+								<div class=" wide equalElement ae-4">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-5">
+								<div class=" wide equalElement ae-5">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class="table wide equalElement ae-6">
+								<div class=" wide equalElement ae-6">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se" />
 									</div>
