added popover for the contact info

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -120,7 +120,7 @@
 						<a href="tel:0101654000" class="bold text-white opacity-10">Tel: 010-165 40 00</a>
 						<br>
 						<br>
-						<a href="../om_oss/#team" class="common-Button text-blue white">Söker du en specifik person?</a>
+						<button class="common-Button text-blue white popupTrigger" data-popup-id="contactInfo">Söker du en specifik person?</button>
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected ">
@@ -184,6 +184,255 @@
     </div>
   </div>
 </section>
+<div class="popup" data-popup-id="contactInfo">
+	<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+  <div class="content popupContent">
+		<div class="container-lg margin-top-1">
+					<h1 class="">Projektavdelning</h1>
+					<ul class="flex fixedSpaces later left  margin-bottom-5">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Madeleine Müller</h3>
+							<div class="ae-6">
+								<p class="micro bold">Projektansvarig Storkund</p>
+								<a href="mailto:madeleine@besiktningsman.se">
+									<p class="micro bold">madeleine@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Nalle Gellermark</h3>
+							<div class="ae-6">
+								<p class="micro bold">Projektansvarig Privatpersoner</p>
+							</div>
+							<a href="mailto:nalle@besiktningsman.se">
+								<p class="micro bold">nalle@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Carina Sandgren</h3>
+							<div class="ae-7">
+								<p class="micro bold">Projektassistent</p>
+							</div>
+							<a href="mailto:carina@besiktningsman.se">
+								<p class="micro bold">carina@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Susanne Linder</h3>
+							<div class="ae-8">
+								<p class="micro bold">Redovisningsekonom</p>
+							</div>
+							<a href="mailto:susanne@besiktningsman.se">
+								<p class="micro bold">susanne@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+
+					<h1 class="">Besiktningsmän</h1>
+					<ul class="flex fixedSpaces later left">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Olof Johansson</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:olof@besiktningsman.se">
+									<p class="micro bold">olof@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Rickard Björk</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:rickard@besiktningsman.se">
+								<p class="micro bold">rickard@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Leif Berg</h3>
+							<div class="ae-7">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:leif@besiktningsman.se">
+								<p class="micro bold">leif@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Magnus Engström</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:magnus@besiktningsman.se">
+								<p class="micro bold">magnus@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+					<ul class="flex fixedSpaces later left">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Jose Escobar</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jose@besiktningsman.se">
+									<p class="micro bold">jose@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Lasse Grandahl</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:rickard@besiktningsman.se">
+								<p class="micro bold">lasse@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Örjan Höglund</h3>
+							<div class="ae-7">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:orjan@besiktningsman.se">
+								<p class="micro bold">orjan@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Charlie Höglund</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:charlie@besiktningsman.se">
+								<p class="micro bold">charlie@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+
+					<ul class="flex fixedSpaces later left">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Jeanette Immo</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jeanette@besiktningsman.se">
+									<p class="micro bold">jeanette@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Dan Jakobsson</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:dan@besiktningsman.se">
+								<p class="micro bold">dan@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Ulf johansson</h3>
+							<div class="ae-7">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:ulf@besiktningsman.se">
+								<p class="micro bold">ulf@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Ari Laukka</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:ari@besiktningsman.se">
+								<p class="micro bold">ari@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+					<ul class="flex fixedSpaces later left">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Robert Lindbom</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:robert@besiktningsman.se">
+									<p class="micro bold">robert@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Konrad Stockenvall</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:konrad@besiktningsman.se">
+								<p class="micro bold">konrad@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Göran Svensson</h3>
+							<div class="ae-7">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:goran@besiktningsman.se">
+								<p class="micro bold">goran@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Margareta Telkert</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:margareta@besiktningsman.se">
+								<p class="micro bold">margareta@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+					<ul class="flex fixedSpaces later left">
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Jim Löfgren</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jim@besiktningsman.se">
+									<p class="micro bold">jim@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-5">Leo Simic</h3>
+							<div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:leo@besiktningsman.se">
+								<p class="micro bold">leo@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-6">Birger Faith-Ell</h3>
+							<div class="ae-7">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:birger@besiktningsman.se">
+								<p class="micro bold">birger@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Anders Widman</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:anders@besiktningsman.se">
+								<p class="micro bold">anders@besiktningsman.se</p>
+							</a>
+						</li>
+						<li class="col-3-12  ">
+							<h3 class="ae-7">Niklas Josefsson</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningsman</p>
+							</div>
+							<a href="mailto:niklas@besiktningsman.se">
+								<p class="micro bold">niklas@besiktningsman.se</p>
+							</a>
+						</li>
+					</ul>
+		</div>
+  </div>
+</div>
+
 <section class="slide blue autoHeight customFooter">
   <div class="content">
     <div class="container">
