header tag line br removed

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 					<div class="fix-10-12">
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom">
-						<p class="hero">Sveriges ledande <br> entreprenadbesiktningsföretag</p>
+						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
 					</div>
 
