commented out current photos

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -170,14 +170,14 @@ Besiktningsman
 				<div class="wrap left">
 
 					<div class="fix-10-12">
-						<h1 class="ae-1">Vilka vi är</h1>
-						<p class="bold">Ledning</p>
+						<h1 class="ae-1">Ledning</h1>
+						<p class="bold"></p>
 					</div>
 					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail" />
+								<!-- <img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail" /> -->
 								<h3 class="ae-5">Marie Selling</h3>
 								<div class="ae-6">
 									<p class="micro bold">Projekt & Ekonomichef</p>
@@ -187,7 +187,7 @@ Besiktningsman
 								</div>
 							</li>
 							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail" />
+								<!-- <img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail" /> -->
 								<h3 class="ae-5">Björn Selling</h3>
 								<div class="ae-6">
 									<p class="micro bold">Affärschef</p>
@@ -197,7 +197,7 @@ Besiktningsman
 								</div>
 							</li>
 							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail" />
+								<!-- <img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail" /> -->
 								<h3 class="ae-6">Jonny Seidel</h3>
 								<div class="ae-7">
 									<p class="micro bold">VD</p>
@@ -207,10 +207,10 @@ Besiktningsman
 								</div>
 							</li>
 							<li class="col-3-12  ">
-								<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" />
+								<!-- <img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" /> -->
 								<h3 class="ae-7">Martin Viberg</h3>
 								<div class="ae-8">
-									<p class="micro bold">Besiktningschef & Besiktningsman</p>
+									<p class="micro bold">Besiktningschef</p>
 									<a href="mailto:martin@besiktningsman.se">
 										<p class="micro bold text-blue">martin@besiktningsman.se</p>
 									</a>
@@ -297,7 +297,8 @@ Besiktningsman
 									</div>
 								</div>
 							</li>
-							<li class="col-2-12">
+							<!-- to do : replace peab and niras with skanska and byggvesta -->
+							<!-- <li class="col-2-12">
 								<div class=" wide equalElement ae-5">
 									<div class="cell">
 										<img width="120" src="../assets/img/logos/peab.jpg" alt="Svenska Bostäder" />
@@ -310,7 +311,7 @@ Besiktningsman
 										<img width="120" src="../assets/img/logos/niras.gif" alt="Svenska Bostäder" />
 									</div>
 								</div>
-							</li>
+							</li> -->
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-7">
 									<div class="cell">
