changed the house picture

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -222,8 +222,8 @@
 								</li>
               </ul>
             </li>
-            <li class="col-6-12 left ae-1 fromRight">
-              <img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/farmhouse.jpg" alt="Foto av ett gammalt landshus"/>
+          	<li class="col-6-12 left ae-1 fromRight">
+							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/house.png" alt="Foto av ett gammalt landshus"/>
             </li>
           </ul>
         </div>
