services private house update + contact us position update

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -157,17 +157,17 @@
           <ul class="flex reverse">
             <li class="col-6-12 left cell-32">
 
-              <div class="white soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
+              <div class="soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
 								<h3>Här finns Besiktningsman.se</h3>
-								<p>Vi expanderar vart över i Sverige för att finnas så nära kund som möjligt.</p>
+								<p>Vi expanderar och finns nära våra kunder.</p>
 							</div>
               <ul class="items-32">
                 <li class="fix-4-12 toLeft text-32">
 
                   <aside class="headquarters white">
-										<h3 class="text-blue small bold">Högkvarter</h3>
-										<p class="small bold" style="font-size:16px;">Heleneborgsgatan 54, Hornstull</p>
-										<p class="small bold" style="font-size: 16px;">Stockholm, 11732</p>
+										<h3 class="text-blue small bold">Huvudkontor</h3>
+										<p class="small bold" style="font-size:16px;">Heleneborgsgatan 54, Södermalm</p>
+										<p class="small bold" style="font-size: 16px;">11732 Stockholm</p>
 									</aside>
                 </li>
               </ul>
