--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -223,7 +223,7 @@
               </ul>
             </li>
           	<li class="col-6-12 left ae-1 fromRight">
-							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/house.png" alt="Foto av ett gammalt landshus"/>
+							<img class="macbook-62 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius: 8px;" src="../assets/img/backgrounds/house_sm.jpg" alt="Foto av ett gammalt landshus"/>
             </li>
           </ul>
         </div>
