career page updated

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -112,28 +112,59 @@
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide whiteSlide contact">
+<section class="slide fade-orange contact" id="">
+  <div class="content">
+    <div class="container" style="height:560px;">
+      <div class="wrap">
+        <div class="container-lg" >
+          <h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
+					<p class="">
+						<a href="#bmText">
+							Läs mer nedan
+							<br>
+							v
+						</a>
+					</p>
+        </div>
+      </div>
+    </div>
+  </div>
+	<div class="background" style="background-image:url(../assets/img/ispect/bm_ipad.jpg)"></div>
+</section>
+<section class="slide whiteSlide kenBurns fromRight" data-name="bmText">
   <div class="content">
     <div class="container">
       <div class="wrap">
-        <div class="container-lg" >
-          <h1 class="">Sveriges ledande entreprenadbesiktningsföretag expenderar!</h1>
-					<p class="">Vi behöver besiktningsmän och ser gärna att Du tar kontakt med:</p>
-					<div class="fromCenter center fix-5-12">
-						<ul class="flex fixedSpaces later fromCenter">
-							<li class="col-6-12">
-								<img class="img-91 wide soft-shadow" src="../assets/img/team/jonny_seidel_circle.png" alt="Foto Jonny Seidel" style="border-radius: 50%;" />
-								<h3 class="small">VD <br>Jonny Seidel</h3>
-								<a href="mailto:jonny@besiktningsman.se" class="common-Button blue text-white" style="font-size: 14px;padding: 0 15px;">jonny@besiktningsman.se</a>
-							</li>
-							<li class="col-6-12">
-								<img class="img-91 wide soft-shadow" src="../assets/img/team/martin_viberg_circle.png" alt="Foto Martin Viberg" style="width: 257px !important;border-radius: 50%;" />
-								<h3 class="small">Besiktningschef <br>Martin Viberg</h3>
-								<a href="mailto:martin@besiktningsman.se" class="common-Button blue text-white fromCenter" style="font-size: 14px;padding: 0 15px;">martin@besiktningsman.se</a>
-							</li>
-						</ul>
-					</div>
+
+        <div class="fix-12-12">
+          <ul class="flex reverse flex-phone">
+            <li class="col-6-12 left ae-1 fromLeft">
+              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän"/>
+            </li>
+            <li class="col-6-12 left cell-32">
+              <h1 class="">Vill du...</h1>
+              <ul class="items-32">
+                <li class="fix-4-12 toLeft text-32">
+                  <p class="ae-4">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <p class="ae-6">− Arbeta i det företag som leder branschens förnyelse?</p>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <p class="ae-6">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+                </li>
+                <li class="fix-4-12 toLeft text-32">
+                  <p class="ae-6">− Bli medarbetare oavsett var i landet du bor?</p>
+                </li>
+								<li class="fix-4-12 toLeft text-32">
+									<a href="mailto:info@besiktningsman.se" class="blue common-Button">Ta kontakt med oss!</a>
+								</li>
+              </ul>
+            </li>
+
+          </ul>
         </div>
+
       </div>
     </div>
   </div>
