faivoncs won't load

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -12,7 +12,7 @@ Besiktningsman
 						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
 						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
 	<!-- favicons -->
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
