info list updated

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -188,6 +188,50 @@
 	<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
   <div class="content popupContent">
 		<div class="container-lg margin-top-1">
+					<h1>Ledning</h1>
+					<!--  List one -->
+					<ul class="flex fixedSpaces later left margin-bottom-5">
+						<li class="col-3-12  ">
+							<!-- <img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail" /> -->
+							<h3 class="ae-5">Marie Selling</h3>
+							<div class="ae-6">
+								<p class="micro bold">Projekt & Ekonomichef</p>
+								<a href="mailto:marie@besiktningsman.se">
+									<p class="micro bold">marie@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<!-- <img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail" /> -->
+							<h3 class="ae-5">Björn Selling</h3>
+							<div class="ae-6">
+								<p class="micro bold">Affärschef</p>
+								<a href="mailto:bjorn@besiktningsman.se">
+									<p class="micro bold">bjorn@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<!-- <img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail" /> -->
+							<h3 class="ae-6">Jonny Seidel</h3>
+							<div class="ae-7">
+								<p class="micro bold">VD</p>
+								<a href="mailto:jonny@besiktningsman.se">
+									<p class="micro bold">jonny@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+						<li class="col-3-12  ">
+							<!-- <img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" /> -->
+							<h3 class="ae-7">Martin Viberg</h3>
+							<div class="ae-8">
+								<p class="micro bold">Besiktningschef</p>
+								<a href="mailto:martin@besiktningsman.se">
+									<p class="micro bold">martin@besiktningsman.se</p>
+								</a>
+							</div>
+						</li>
+					</ul>
 					<h1 class="">Projektavdelning</h1>
 					<ul class="flex fixedSpaces later left  margin-bottom-5">
 						<li class="col-3-12  ">
