info list updated again

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -261,6 +261,15 @@
 								<p class="micro bold">carina@besiktningsman.se</p>
 							</a>
 						</li>
+						<li class="col-3-12">
+							<h3 class="ae-6">Madeleine Pettersson</h3>
+							<div class="ae-7">
+								<p class="micro bold">Projektassistent</p>
+							</div>
+							<a href="mailto:carina@besiktningsman.se">
+								<p class="micro bold">madde@besiktningsman.se</p>
+							</a>
+						</li>
 						<li class="col-3-12  ">
 							<h3 class="ae-7">Susanne Linder</h3>
 							<div class="ae-8">
@@ -370,7 +379,7 @@
 							</a>
 						</li>
 						<li class="col-3-12  ">
-							<h3 class="ae-6">Ulf johansson</h3>
+							<h3 class="ae-6">Ulf Johansson</h3>
 							<div class="ae-7">
 								<p class="micro bold">Besiktningsman</p>
 							</div>
