trying different php configs to get the mail to send more info

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -112,9 +112,9 @@
 
 	<!-- INTRO SLIDE -->
 	<!-- Slide #55 -->
-<section class="slide fade-orange contact" id="">
+<section class="slide fade contact" id="">
   <div class="content">
-    <div class="container" style="height:560px;">
+    <div class="container" style="height:660px;">
       <div class="wrap">
         <div class="container-lg" >
           <h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
