--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -132,7 +132,7 @@
 								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
 								<div class="label"><label class="left small bold" for="email55">E-post adress</label></div>
 								<input class="stroke left wide" id="email55" type="email" name="yourEmail" placeholder="E-post adress..." required/>
-								<div class="label cropTop"><label class="cropTop left small bold" for="name55">Telefon</label></div>
+								<div class="label cropTop"><label class="cropTop left small bold" for="phone55">Telefon</label></div>
 								<input class="stroke left wide" id="phone55" type="text" name="yourPhone" placeholder="Telefon nr..." required/>
 								<div class="label"><label class="left small bold" for="message55">Meddelande</label></div>
 								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
