new photos on services page

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -170,7 +170,7 @@
         <div class="fix-12-12">
           <ul class="flex reverse flex-phone">
             <li class="col-6-12 left ae-1 fromLeft">
-              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" src="../assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast"/>
+              <img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius:8px;" src="../assets/img/backgrounds/brf_orange.jpg" alt="Foto av BRF i Belfast"/>
             </li>
             <li class="col-6-12 left cell-32">
               <h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
