--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -120,8 +120,8 @@ Besiktningsman
 			<div class="container" style="height: 660px;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<h1>Vi på Besiktningsman.se</h1>
-						<p>Vi är ett fristående besiktningsföretag som utför besiktningar objektivt <br>och opartiskt enligt gällande bygg- och branschregler.</p>
+						<h1>Besiktningsman.se</h1>
+						<p>Ett oberoende besiktningsföretag bildat 2003 av erfarna besiktningsmän.<br> Idag Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT. </p>
 					</div>
 				</div>
 			</div>
@@ -129,39 +129,28 @@ Besiktningsman
 		</div>
 		<div class="background" style="background-image:url(../assets/img/backgrounds/crew.jpg)"></div>
 	</section>
-	<!-- Slide #90 -->
-	<section class="slide whiteSlide margin-top-1 margin-bottom-5">
-		<div class="content">
-			<div class="container-lg">
-				<div class="wrap">
+	<!-- Slide #24 -->
+	<section class="slide whiteSlide kenBurns">
+	  <div class="content">
+	    <div class="container">
+	      <div class="wrap">
 
-					<div class="fix-10-12">
-						<ul class="flex left">
-							<li class="col-10-12 fromBottomLeft">
-								<h1 class="ae-2">Sedan starten 2003 har vi utfört ett stort antal besiktningar åt såväl konsumenter som erade företag inom bygg och fastighet.</h1>
-								<ul class="flex">
-									<li class="col-11-12">
-										<p>Vårt huvudkontor ligger på Södermalm i Stockholm och vi finns i Uppsala, Norrköping, Göteborg, Malmö samt Helsingborg.</p>
-									</li>
-									<li class="col-11-12">
-										<p>Vi har KA-kontrollansvarig och besiktningsmän för alla typer av byggnationer, allt från småhus till flerfamiljs-, kontors-, industrihus.</p>
-									</li>
-									<li class="col-11-12">
-										<p>Våra besiktningsmän är välutbildade av SBR och har en gedigen erfarenhet inom byggsektorn och olika former av besiktningar. <br><br>Samtliga besiktningsmän genomgår årligen flertal kompetenshöjande utbildningar såväl internt som kurser & symposium
-											anordnade av ansvariga branschorganisationer.</p>
-									</li>
-									<li>
-										<button class="common-Button blue text-white popupTrigger" data-popup-id="text" style="margin: 0px 0px 25px 25px;">Våra policys</button>
-									</li>
-								</ul>
-							</li>
+	        <div class="fix-10-12">
+	          <h1 class="fromCenter">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler. Över hela landet.</h1>
+	          <div class="ae-3"><p class="margin-bottom-4 border-bottom-grey"></p></div>
+	          <div class="left ae-5 cropBottom">
+	            <p>Besiktningsman.se var vid starten 2003 främst riktat mot småhusmarknaden. Idag är vi ledande inom entreprenadbesiktning för landets bygg- och fastighetsföretag och har en fortsatt stark position bland bostadsrättsföreningar och privatpersoner.</p>
+							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.</p>
+							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
+							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
+							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt.</p>
+							<button class="common-Button white text-blue fromLeft popupTrigger" data-popup-id="#">Mer om vårt helhetskoncept</button>
+						</div>
+	        </div>
 
-						</ul>
-					</div>
-
-				</div>
-			</div>
-		</div>
+	      </div>
+	    </div>
+	  </div>
 	</section>
 	<!-- team -->
 	<section class="slide whiteSlide margin-bottom-5" id="team" data-name="team">
@@ -230,13 +219,8 @@ Besiktningsman
 			<div class="container-lg">
 				<div class="wrap">
 
-					<div class="fix-10-12 left">
-						<h1 class="ae-1">Några av våra uppdragsgivare</h1>
-						<p>Vi utför årligen ett stort antal besiktningar åt konsumenter som har byggt nytt eller renoverat såsom ägare till enskilda småhus eller är bostadsrättsinnehavare.</p>
-						<p>Småhustillverkare</p>
-						<p>100-tals bostadsrättsföreningar</p>
-						<p>Ett betydande antal företag inom bygg och fastighet.</p>
-						<p>Utför ett stort antal uppdrag åt advokatbyråer i samband med tvister.</p>
+					<div class="fix-10-12 left margin-bottom-6">
+						<h1>Några uppdragsgivare och samarbetspartners</h1>
 					</div>
 					<div class="fix-10-12 margin-bottom-5">
 						<!-- remove class tintLogos to disable color change of logo images -->
@@ -244,96 +228,87 @@ Besiktningsman
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-3">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ssm.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ssm.png" alt="SSM" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-4">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-5">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/sb.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-6">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ikano-bostad.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ikano-bostad.png" alt="ikano" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-7">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/sollentunahem.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-8">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ffab.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ffab.png" alt="FFAB" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-3">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ncc.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ncc.png" alt="NCC" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-4">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/em.jpg" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/em.jpg" alt="EM" />
 									</div>
 								</div>
 							</li>
-							<!-- to do : replace peab and niras with skanska and byggvesta -->
-							<!-- <li class="col-2-12">
+							<li class="col-2-12">
 								<div class=" wide equalElement ae-5">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/peab.jpg" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/skanska.png" alt="SKANSKA" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-6">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/niras.gif" alt="Svenska Bostäder" />
+										<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
 									</div>
 								</div>
-							</li> -->
+							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-7">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/ebab-logo.png" alt="EBAB" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-8">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/nordea.svg" alt="Svenska Bostäder" />
+										<img width="120" src="../assets/img/logos/nordea.svg" alt="Nordea" />
 									</div>
 								</div>
 							</li>
-						</ul>
-					</div>
-					<div class="fix-10-12 toCenter left margin-bottom-5">
-						<h1 class="ae-1">Samarbetspartners</h1>
-					</div>
-					<div class="fix-10-12">
-						<!-- remove class tintLogos to disable color change of logo images -->
-						<ul class="grid equal later">
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-3">
 									<div class="cell">
@@ -394,6 +369,7 @@ Besiktningsman
 							<p class="small"><a href="../nyheter/">Nyheter</a></p>
 							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
 							<p class="small"><a href="../kontakt/">Kontakt</a></p>
+							<p class="small popupTrigger" data-popup-id="text">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
@@ -417,7 +393,7 @@ Besiktningsman
 		</div>
 	</section>
 
-	<!-- Popup Text -->
+	<!-- POLICYS Popup Text -->
 	<div class="popup animated" data-popup-id="text">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
