--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -232,52 +232,114 @@
     </div>
   </div>
 </section>
-<section class="slide blue autoHeight customFooter">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
+	<section class="slide blue autoHeight customFooter">
+		<div class="content">
+			<div class="container">
+				<div class="wrap">
 
-        <ul class="grid fixedSpaces left">
-          <li class="col-5-10 wide-col ae-3">
-            <a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Kontor</h3>
-            <p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-            <p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-            <p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-            <p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-            <p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
-          </li>
-          <li class="col-5-10 ae-3">
-            <h3 class="margin-bottom-1">Se mer</h3>
-            <p class="small"><a href="../om_oss/">Om oss</a></p>
-            <p class="small"><a href="../karriar/">Karriär</a></p>
-            <p class="small"><a href="../nyheter/">Nyheter</a></p>
-            <p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
-						<p class="small"><a href="../kontakt/">Kontakt</a></p>
-          </li>
-          <li class="col-5-10 ae-4">
-            <h3 class="margin-bottom-1">Länkar</h3>
-            <p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-            <p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-            <p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-            <p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-            <p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
-          </li>
-          <li class="col-5-10 ae-5">
-            <h3 class="margin-bottom-1">Följ oss</h3>
-            <p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-            <p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-            <p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-            <p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
-          </li>
-        </ul>
+					<ul class="grid fixedSpaces left">
+						<li class="col-5-10 wide-col ae-3">
+							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Kontor</h3>
+							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+						</li>
+						<li class="col-5-10 ae-3">
+							<h3 class="margin-bottom-1">Se mer</h3>
+							<p class="small"><a href="../om_oss/">Om oss</a></p>
+							<p class="small"><a href="../karriar/">Karriär</a></p>
+							<p class="small"><a href="../nyheter/">Nyheter</a></p>
+							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
+							<p class="small"><a href="../kontakt/">Kontakt</a></p>
+							<p class="small popupTrigger" data-popup-id="text">Våra policys</p>
+						</li>
+						<li class="col-5-10 ae-4">
+							<h3 class="margin-bottom-1">Länkar</h3>
+							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+						</li>
+						<li class="col-5-10 ae-5">
+							<h3 class="margin-bottom-1">Följ oss</h3>
+							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+						</li>
+					</ul>
 
-      </div>
-    </div>
-  </div>
-</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- POLICYS Popup Text -->
+	<div class="popup animated" data-popup-id="text">
+		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+		<div class="content popupContent">
+			<div class="container">
+				<div class="wrap spaces">
+					<div class="fix-10-12 left">
+						<h1 class="">Våra policys</h1>
+						<div class="text-58">
+							<h2 class="text-58">Miljö</h2>
+							<p class="small">
+								Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
+								<br>
+								<br> I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
+								<br>
+								<br> Våra miljömål ska baseras på vår miljöpåverkan, kontinuerligt följas upp och anpassas till verksamheten.
+								<br>
+								<br> Råvaror och energi ska utnyttjas så effektivt som möjligt. Återanvändning och återvinning skall underlättas.
+								<br>
+								<br> Alla anställda är väl informerade om hur vi tillsammans kan påverka och förbättra miljön omkring oss. Genom denna inriktning vill vi bidra till en bättre omvärld samt göra företaget mer attraktivt för anställda, samarbetspartners samt kunder.
+							</p>
+						</div>
+						<h3 class="text-58">Jämställdhet</h3>
+						<div class="margin-bottom-5">
+							<li class="col-12-12">
+								<h3>Besiktningsman.se Sverige AB arbetar strategiskt med att organisera och leda verksamheten utifrån grundsynen om alla människors lika värde.
+											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
+							</li>
+							<li class="col-12-12">
+								<p class="small">
+									Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
+									<br>
+									<br> Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
+									<ul>
+										<li>
+											<p class="small">• Man – Kvinna</p>
+										</li>
+										<li>
+											<p class="small">• Ung – Gammal</p>
+										</li>
+										<li>
+											<p class="small">• Olika kulturella bakgrunder</p>
+										</li>
+										<li>
+											<p class="small">• Olika kompetenser</p>
+										</li>
+										<li>
+											<p class="small">• Geografisk spridning</p>
+										</li>
+									</ul>
+									<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
+								</p>
+							</li>
+						</div>
+						<a class="button round white small" data-popup-action="close">Stäng</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- Preloader -->
 	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
